# Proxmox-OpenAPI

./: .envrc  .gitignore  .gitmessage  .mcp.json  .safety-project.ini  CHANGELOG.md  CLAUDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  ROADMAP.md  package-lock.json  pr_body.md  proxmox-ve-api-complete.yaml  proxmox-ve-api.json  pyproject.toml  renovate.json  requirements.txt
.claude/: settings.json
.claude/commands/: prime.md
.claude/hooks/: pre_tool_use.py
.cursor/rules/: proxmox-openapi-conventions.mdc  search-tools.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: release.yml  update-api-specs-parallel.yml  update-api-specs.yml  use-sync-labels.yml
.roo/rules/: development-shortcuts.md
.serena/: project.yml
artifacts/pbs-specs/: README.md  pbs-api.yaml
artifacts/pve-specs/: README.md  pve-api.json  pve-api.yaml
docs/: GIT_COMMIT_WORKFLOW.md  dagger-implementation-strategy.md  performance-guide.md  prd.md
proxmox-backup-server/: README.md  apidoc.js  pbs-api.json  pbs-api.yaml
proxmox-virtual-environment/: README.md  apidoc.js  pve-api.json  pve-api.yaml
scripts/: __init__.py  unified_parser.py  validate-commit.sh  validate_openapi.py
scripts/pbs/: convert_to_yaml.py  generate_openapi.py  parse_pbs_api_robust.py  pbs-api.json  pbs-api.yaml
scripts/pve/: convert_to_yaml.py  create_complete_openapi.py  generate_openapi.py  pve-api.json  pve-api.yaml
